--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# build output
+dist/*
 
 # Go workspace file
 go.work
+
+# MacOS
+.DS_Store
